--- a/kasa/src/pages/Home/Home.css
+++ b/kasa/src/pages/Home/Home.css
@@ -1,64 +1,22 @@
-.main-home{
-  background-color : white;
-  padding: 0px 100px;}
-
-.banner {
-  display:flex;
-  background: rgba(0,0,0,.8);
-  border-radius: 25px;
-  align-items: center;
-  justify-content: center;
+.liste-logements {
+    background-color: #f6f6f6;
+    border-radius: 25px;
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr; 
+    gap: 50px 60px; 
+    padding: 55px 50px;
 }
 
-.banner_img {
-  width: 100%;
-  height: 100%;
-  margin: auto;
-  border-radius: 25px;
-  opacity: 0.6;
-}
-.banner_title{
-  position: absolute;
-  z-index: 3;
-  font-family: "Montserrat", sans-serif;
-  font-size: 48px;
-  font-weight: 500;
-  line-height: 142.6%;
-  display:flex;
-  color: #FFFFFF;
-}
+@media screen  and (max-width: 1490px) {
+    .Accueil > .banniere {
+        height: 110px;
+        margin-bottom: 20px;
+    }
 
-
-/********** Tablette **********/
-@media (max-width: 992px){
-.main-home {
-    padding : 0px 20px;
-}
-.banner {
-  height:110px;
-  border-radius: 10px;
-}
-.banner_img {
-  height:110px;
-  border-radius: 10px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.banner_title{
-  font-size: 24px;
-  }
-}
-
-/************* Mobile *******************/
-
-@media (max-width: 768px){
-.banner_title{
-  font-size: 24px;
-  line-height:100%;
-  text-align: left;
-  font-weight: 500;
-  left:9%;
-  right:25%;
-  }
-
+    .liste-logements {
+        background-color: unset;
+        gap: 20px 0;
+        grid-template-columns: 1fr;
+        padding: 0;
+    }
 }
