Home, 404, Route 404, Montserrat

--- a/kasa/src/App.css
+++ b/kasa/src/App.css
@@ -5,10 +5,18 @@ body {
   padding: 0;
 }
 
-/* Polices */
-* {
+.font-face-mt {
   font-family: "Montserrat";
-}
+ }
+
+ .font-face-mtm {
+  font-family: "MontserratMedium";
+ }
+
+ .font-face-mtb {
+  font-family: "MontserratBold";
+ }
+
 
 /* Contenu */
 .App {
