--- a/kasa/src/components/Card/Card.css
+++ b/kasa/src/components/Card/Card.css
@@ -1,8 +1,10 @@
+a .card {
+    width: 30%;
+}
+
 .card {
     display: flex;
     border-radius: 10px;
-    height: auto;
-    width: 30%;
     position: relative;
 }
 .card :hover {
@@ -12,7 +14,6 @@
 
 .card-image {
     border-radius: 10px;
-    height: 100%;
     object-fit: cover;
     width: 100%;
 }
@@ -34,6 +35,7 @@
     bottom: 20px;
     color: #ffffff;
     font-size: 18px;
+    font-family: "Montserrat", "sans-serif";
     left: 20px;
     margin-right: 20px;
     position: absolute;
