--- a/kasa/src/pages/Home/Home.css
+++ b/kasa/src/pages/Home/Home.css
@@ -1,14 +1,18 @@
+.Home {
+    display: flex;
+    height: auto;
+}
+
 .liste-logements {
     background-color: #f6f6f6;
     border-radius: 25px;
-    display: grid; 
-    grid-template-columns: 1fr 1fr 1fr; 
-    gap: 50px 60px; 
-    padding: 55px 50px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 @media screen  and (max-width: 1490px) {
-    .Accueil > .banniere {
+    .Home > .banner {
         height: 110px;
         margin-bottom: 20px;
     }
