--- a/kasa/src/components/Header/Header.css
+++ b/kasa/src/components/Header/Header.css
@@ -24,14 +24,24 @@ nav {
   color: #000000;
 }
 
-@media screen and (max-width: 1490px) {
   header {
     margin: 40px 2.5%;
     width: 95%;
   }
-  
-  header > img {
-    height: 47px;
-  }
 
-}
+  @media (max-width: 767px) {
+    header {
+      text-transform: uppercase;
+      font-size: 13px;
+    }
+    
+    header > img {
+      height: 35px;
+    }
+
+
+    .lien-site {
+      margin: auto 15px;
+    }
+
+  }
